# intercourse-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
concurrent_output/: Cargo.toml
it_company/: Cargo.toml
it_company/src/: lib.rs  pc_directory.rs  person.rs
it_department/: Cargo.toml
it_department/src/: lib.rs  main.rs  pc.rs  pc_directory.rs  person.rs
network_simulator/: Cargo.toml
network_simulator/src/: lib.rs  network.rs
people_preference/: Cargo.toml
