[package]
name = "it_company"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
once_cell = "1.19.0"
regex = "1.10.3"
# use version specified in the workspace's Cargo.toml
thiserror = { workspace = true }
phantom_newtype = { workspace = true }